Make JenkinsJobsController restfull, refactor things

--- a/app/views/jenkins/_jobs_list.html.erb
+++ b/app/views/jenkins/_jobs_list.html.erb
@@ -27,6 +27,8 @@
       <th><%= l(:label_job_name) %></th>
       <th><%= l(:label_latest_build) %></th>
       <th><%= l(:label_job_state) %></th>
+      <th><%= l(:label_job_duration) %></th>
+      <th><%= l(:label_last_changesets) %></th>
       <th><%= l(:label_job_history) %></th>
       <th></th>
     </tr>
