--- a/app/views/jenkins/jenkins_instructions.html.erb
+++ b/app/views/jenkins/jenkins_instructions.html.erb
@@ -1,5 +1,8 @@
-<%# This is used to display basic git setup instructions, like on github... %>
 <% flash.now[:warning] = l(:error_no_settings, :url => url_for(:controller => 'projects', :action => 'settings', :tab => 'jenkins', :id => @project)) %>
+
+<% content_for :header_tags do %>
+  <%= stylesheet_link_tag 'bootstrap_custom', :plugin => 'redmine_bootstrap' %>
+<% end %>
 
 <h2><%= l(:label_jobs_list) %></h2>
 
