--- a/app/views/projects/settings/_jobs_list.html.erb
+++ b/app/views/projects/settings/_jobs_list.html.erb
@@ -1,7 +1,4 @@
 <div id="jobs-list">
-
-  <%= hidden_field_tag 'jenkins_setting[job_filter][]', '' %>
-
   <% if @jobs.length == 0 %>
     <% if !@error.nil? %>
       <%= @error %>
@@ -11,22 +8,31 @@
   <% else %>
     <table class="table table-hover">
       <tr>
-        <th><%= image_tag('toggle_check.png', :style => 'display: block; margin-left: 10px; margin-top: 5px;') %></th>
-        <th><%= l(:label_job_name)%></th>
+        <th><%= l(:label_job_name) %></th>
+        <th><%= l(:label_linked_repository) %></th>
         <th><%= l(:label_number_of_stored_builds) %></th>
         <th><%= l(:label_number_of_jenkins_builds) %></th>
+        <th></th>
       </tr>
 
       <% @jobs.each do |job| %>
         <tr>
-          <td><%= check_box_tag 'jenkins_setting[job_filter][]', job, @jenkins_setting.job_include?(job) %></td>
-          <td><%= job %></td>
-          <td><%= JenkinsBuild.redmine_count_of(job) %></td>
-          <td><%= @jenkins_setting.jenkins_count_of(job) %></td>
+          <td><%= job.name %></td>
+          <td><%= job.repository.identifier.empty? ? 'default' : job.repository.identifier %></td>
+          <td><%= JenkinsBuild.redmine_count_of(job.name) %></td>
+          <td><%= @jenkins_setting.jenkins_count_of(job.name) %></td>
+          <td>
+            <%= link_to l(:button_edit), edit_jenkins_job_path(@project, job),
+                                         :class => 'icon icon-edit modal-box' %>
+
+            <%= link_to l(:button_delete), jenkins_job_path(@project, job),
+                                           :remote  => true,
+                                           :method  => :delete,
+                                           :confirm => l(:text_are_you_sure),
+                                           :class   => 'icon icon-del' %>
+          </td>
         </tr>
       <% end %>
-
     </table>
   <% end %>
-
 </div>
