Use Redmine Bootstrap Kit plugin

--- a/app/views/jenkins/index.html.erb
+++ b/app/views/jenkins/index.html.erb
@@ -1,11 +1,11 @@
 <% content_for :header_tags do %>
-  <%= javascript_include_tag 'bootstrap',                   :plugin => 'redmine_bootstrap' %>
+  <%= javascript_include_tag 'bootstrap',                   :plugin => 'redmine_bootstrap_kit' %>
 
-  <%= stylesheet_link_tag 'bootstrap/bootstrap_custom',     :plugin => 'redmine_bootstrap' %>
-  <%= stylesheet_link_tag 'bootstrap/bootstrap_label',      :plugin => 'redmine_bootstrap' %>
-  <%= stylesheet_link_tag 'bootstrap/bootstrap_pagination', :plugin => 'redmine_bootstrap' %>
-  <%= stylesheet_link_tag 'bootstrap/bootstrap_tables',     :plugin => 'redmine_bootstrap' %>
-  <%= stylesheet_link_tag 'font_awesome',                   :plugin => 'redmine_bootstrap' %>
+  <%= stylesheet_link_tag 'bootstrap/bootstrap_custom',     :plugin => 'redmine_bootstrap_kit' %>
+  <%= stylesheet_link_tag 'bootstrap/bootstrap_label',      :plugin => 'redmine_bootstrap_kit' %>
+  <%= stylesheet_link_tag 'bootstrap/bootstrap_pagination', :plugin => 'redmine_bootstrap_kit' %>
+  <%= stylesheet_link_tag 'bootstrap/bootstrap_tables',     :plugin => 'redmine_bootstrap_kit' %>
+  <%= stylesheet_link_tag 'font_awesome',                   :plugin => 'redmine_bootstrap_kit' %>
 
   <%= stylesheet_link_tag 'application',                    :plugin => 'redmine_jenkins' %>
 <% end %>
