--- a/app/views/jenkins_jobs/new.html.erb
+++ b/app/views/jenkins_jobs/new.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'bootstrap_custom', :plugin => 'redmine_bootstrap' %>
+<%= stylesheet_link_tag 'bootstrap_custom', :plugin => 'redmine_bootstrap_kit' %>
 
 <% if !@is_xhr %>
   <h2><%= l(:label_add_jenkins_job) %></h2>
