--- a/app/views/jenkins/jenkins_instructions.html.erb
+++ b/app/views/jenkins/jenkins_instructions.html.erb
@@ -1,7 +1,7 @@
 <% flash.now[:warning] = l(:error_no_settings, :url => url_for(:controller => 'projects', :action => 'settings', :tab => 'jenkins', :id => @project)) %>
 
 <% content_for :header_tags do %>
-  <%= stylesheet_link_tag 'bootstrap_custom', :plugin => 'redmine_bootstrap' %>
+  <%= stylesheet_link_tag 'bootstrap_custom', :plugin => 'redmine_bootstrap_kit' %>
 <% end %>
 
 <h2><%= l(:label_jobs_list) %></h2>
