--- a/app/views/projects/settings/_redmine_jenkins.html.erb
+++ b/app/views/projects/settings/_redmine_jenkins.html.erb
@@ -1,11 +1,11 @@
 <% content_for :header_tags do %>
-  <%= stylesheet_link_tag 'bootstrap/bootstrap_custom',     :plugin => 'redmine_bootstrap' %>
-  <%= stylesheet_link_tag 'bootstrap/bootstrap_tables',     :plugin => 'redmine_bootstrap' %>
-  <%= stylesheet_link_tag 'bootstrap/bootstrap_switch',     :plugin => 'redmine_bootstrap' %>
+  <%= stylesheet_link_tag 'bootstrap/bootstrap_custom',     :plugin => 'redmine_bootstrap_kit' %>
+  <%= stylesheet_link_tag 'bootstrap/bootstrap_tables',     :plugin => 'redmine_bootstrap_kit' %>
+  <%= stylesheet_link_tag 'bootstrap/bootstrap_switch',     :plugin => 'redmine_bootstrap_kit' %>
   <%= stylesheet_link_tag 'application',                    :plugin => 'redmine_jenkins' %>
 
-  <%= javascript_include_tag 'plugins/bootstrap_switch',    :plugin => 'redmine_bootstrap' %>
-  <%= javascript_include_tag 'bootstrap',                   :plugin => 'redmine_bootstrap' %>
+  <%= javascript_include_tag 'plugins/bootstrap_switch',    :plugin => 'redmine_bootstrap_kit' %>
+  <%= javascript_include_tag 'bootstrap',                   :plugin => 'redmine_bootstrap_kit' %>
 
   <%= javascript_tag do %>
     var modals           = Object();
