--- a/app/views/jenkins_jobs/edit.html.erb
+++ b/app/views/jenkins_jobs/edit.html.erb
@@ -15,8 +15,7 @@
   </p>
 
   <p>
-    <%= f.select :repository_id, options_for_select(@project.repositories.collect {|r| [ r.identifier.blank? ? 'default' : r.identifier, r.id ]},
-                                                                                  [@job.repository.identifier.blank? ? 'default' : @job.repository.identifier, @job.repository.id]) %>
+    <%= f.select :repository_id, options_for_select(@project.repositories.collect {|r| [ r.identifier.blank? ? 'default' : r.identifier, r.id ]}, render_selected_repo(@job)) %>
   </p>
 
   <% if !@is_xhr %>
