--- a/app/views/jenkins_jobs/history.js.erb
+++ b/app/views/jenkins_jobs/history.js.erb
@@ -1,1 +1,1 @@
-$('#job_builds_history').html('<%= escape_javascript(render(:partial => "history")) %>');
+$('#job_builds_history').html('<%= escape_javascript(render partial: "history", locals: {builds: @builds}) %>');
