--- a/app/views/jenkins_jobs/history.html.erb
+++ b/app/views/jenkins_jobs/history.html.erb
@@ -1,3 +1,3 @@
 <div id="job_builds_history">
-  <%= render :partial => 'history' %>
+  <%= render partial: 'history', locals: {builds: @builds} %>
 </div>
