--- a/app/views/jenkins_jobs/new.html.erb
+++ b/app/views/jenkins_jobs/new.html.erb
@@ -1,11 +1,9 @@
-<%= stylesheet_link_tag 'bootstrap_custom', :plugin => 'redmine_bootstrap_kit' %>
-
 <% if !@is_xhr %>
   <h2><%= l(:label_add_jenkins_job) %></h2>
 <% end %>
 
-<%= labelled_form_for :jenkins_jobs, @mirror,
-                      :url  => { :controller => 'jenkins_jobs', :action => 'create', :id => @project },
+<%= labelled_form_for :jenkins_jobs, @job,
+                      :url  => jenkins_jobs_path(@project),
                       :html => { :method => :post, :class => 'tabular', :remote => @is_xhr } do |f| %>
 
   <div id="validation_messages_job"><%= error_messages_for 'job' %></div>
