--- a/app/views/projects/settings/_jobs_list.html.erb
+++ b/app/views/projects/settings/_jobs_list.html.erb
@@ -12,6 +12,7 @@
         <th><%= l(:label_linked_repository) %></th>
         <th><%= l(:label_number_of_stored_builds) %></th>
         <th><%= l(:label_number_of_jenkins_builds) %></th>
+        <th><%= l(:label_number_of_builds_to_keep) %></th>
         <th></th>
       </tr>
 
@@ -21,6 +22,7 @@
           <td><%= render_repo_name(job) %></td>
           <td><%= JenkinsBuild.redmine_count_of(job.name) %></td>
           <td><%= @jenkins_setting.jenkins_count_of(job.name) %></td>
+          <td><%= job.builds_to_keep %></td>
           <td>
             <%= link_to l(:button_edit), edit_jenkins_job_path(@project, job),
                                          :class => 'icon icon-edit modal-box' %>
