--- a/app/views/jenkins_jobs/edit.html.erb
+++ b/app/views/jenkins_jobs/edit.html.erb
@@ -1,11 +1,9 @@
-<%= stylesheet_link_tag 'bootstrap_custom', :plugin => 'redmine_bootstrap_kit' %>
-
 <% if !@is_xhr %>
   <h2><%= l(:label_edit_jenkins_job) %></h2>
 <% end %>
 
 <%= labelled_form_for :jenkins_jobs, @job,
-                      :url  => { :controller => 'jenkins_jobs', :action => 'update', :id => @project },
+                      :url  => jenkins_job_path(@project, @job),
                       :html => { :method => :put, :class => 'tabular', :remote => @is_xhr } do |f| %>
 
   <div id="validation_messages_job"><%= error_messages_for 'job' %></div>
@@ -16,6 +14,10 @@
 
   <p>
     <%= f.select :repository_id, options_for_select(@project.repositories.collect {|r| [ r.identifier.blank? ? 'default' : r.identifier, r.id ]}, render_selected_repo(@job)) %>
+  </p>
+
+  <p>
+    <%= f.text_field :builds_to_keep %>
   </p>
 
   <% if !@is_xhr %>
