--- a/app/views/jenkins_jobs/refresh.js.erb
+++ b/app/views/jenkins_jobs/refresh.js.erb
@@ -1,3 +1,9 @@
 $('#<%= @job.name.downcase.gsub(" ", "_") %>').replaceWith('<%= escape_javascript(render :partial => "job_solo", :locals => {:job => @job}) %>');
 $('#<%= @job.name.downcase.gsub(" ", "_") %>').effect("highlight", {color: '#D9EDF7'}, 1500);
 initModalBoxes(modals);
+
+<% if !@errors.blank? %>
+$('#job-error').html('<%= escape_javascript(@errors) %>');
+$('#job-error').show();
+$('#job-info').hide();
+<% end %>
