Add missing labels

--- a/app/views/projects/settings/_redmine_jenkins.html.erb
+++ b/app/views/projects/settings/_redmine_jenkins.html.erb
@@ -33,7 +33,7 @@
 
   <div class="box tabular">
     <p>
-      <label><%= l(:label_url) %></label>
+      <label><%= l(:label_jenkins_url) %></label>
       <%= f.text_field :url, :size => 50 %>
       <br />
       <em><%= l(:label_jenkins_url_desc) %></em>
