Use Ajax helpers for Ajax rendering

--- a/app/views/jenkins/_jobs_list.html.haml
+++ b/app/views/jenkins/_jobs_list.html.haml
@@ -3,8 +3,7 @@
 
 - else
 
-  #job-info{ class: 'flash notice', style: 'display: none;' }
-  #job-error{ class: 'flash error', style: 'display: none;' }
+  .flash-messages
 
   %table{ class: 'table table-hover' }
     %thead
