--- a/app/views/jenkins_jobs/build.js.erb
+++ b/app/views/jenkins_jobs/build.js.erb
@@ -1,9 +1,1 @@
-<% if @error %>
-$('#job-error').html('<%= escape_javascript(@content) %>');
-$('#job-error').show();
-$('#job-info').hide();
-<% else %>
-$('#job-info').html('<%= escape_javascript(@content) %>');
-$('#job-info').show();
-$('#job-error').hide();
-<% end %>
+<%= render_flash_messages_as_js('.flash-messages') %>
