Load Bootstrap custom css

--- a/app/views/common/_jenkins_js_headers.html.haml
+++ b/app/views/common/_jenkins_js_headers.html.haml
@@ -1,4 +1,5 @@
 - content_for :header_tags do
+  = stylesheet_link_tag 'bootstrap_custom',               plugin: 'redmine_bootstrap_kit'
   = stylesheet_link_tag 'bootstrap/bootstrap_custom',     plugin: 'redmine_bootstrap_kit'
   = stylesheet_link_tag 'bootstrap/bootstrap_label',      plugin: 'redmine_bootstrap_kit'
   = stylesheet_link_tag 'bootstrap/bootstrap_pagination', plugin: 'redmine_bootstrap_kit'
