--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -10,3 +10,11 @@ pre.jenkins-output {
   white-space: -o-pre-wrap;    /* Opera 7 */
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+
+ul.changesets_list li p {
+  display: inline;
+}
+
+ul.changesets_list li p.revision {
+  padding-right: 7px;
+}
