--- a/app/views/common/_jenkins_sidebar.html.haml
+++ b/app/views/common/_jenkins_sidebar.html.haml
@@ -1,4 +1,4 @@
 %h3= l(:label_jenkins)
 
-- if user_allowed_to(:edit_jenkins_settings, @project)
+- if User.current.allowed_to?(:edit_jenkins_settings, @project)
   %p= link_to l(:label_settings), settings_project_path(@project, 'jenkins')
