--- a/app/views/jenkins_jobs/new.html.haml
+++ b/app/views/jenkins_jobs/new.html.haml
@@ -2,7 +2,7 @@
                     url:  jenkins_jobs_path(@project),
                     html: { method: :post, class: 'tabular', remote: true } do |f|
 
-  #validation_messages_job= error_messages_for 'job'
+  .flash-messages= error_messages_for 'job'
 
   %p= f.select :name, options_for_select(@jobs.collect {|job| [job, job]}), label: l(:field_job_name)
   %p= f.select :repository_id, options_for_select(@project.repositories.collect {|r| [ r.identifier.blank? ? 'default' : r.identifier, r.id ]})
