--- a/app/views/jenkins/_jobs_list.html.haml
+++ b/app/views/jenkins/_jobs_list.html.haml
@@ -21,6 +21,4 @@
         = render partial: 'jenkins_jobs/job_solo', locals: { job: job }
 
   :javascript
-    $(document).ready(function() {
-      initModalBoxes(modals);
-    });
+    $(document).ready(function() { initModalBoxes(modals); });
