Add feature https://github.com/jbox-web/redmine_jenkins/issues/21

--- a/app/views/jenkins_jobs/_job_solo.html.haml
+++ b/app/views/jenkins_jobs/_job_solo.html.haml
@@ -5,5 +5,5 @@
     %td= p.job_state
     %td= p.latest_build_duration
     %td= p.latest_changesets
-    %td= p.job_history
+    %td= p.build_history
     %td= p.job_actions
