--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -18,3 +18,7 @@ ul.changesets_list li p {
 ul.changesets_list li p.revision {
   padding-right: 7px;
 }
+
+div.changesets.invisible {
+  display: none;
+}
