--- a/app/views/common/_jenkins_js_headers.html.haml
+++ b/app/views/common/_jenkins_js_headers.html.haml
@@ -1,11 +1,11 @@
 - content_for :header_tags do
-  = redmine_bootstrap_kit_load(:redmine_bootstrap_kit)
-  = redmine_bootstrap_kit_load(:bootstrap_label)
-  = redmine_bootstrap_kit_load(:bootstrap_modals)
-  = redmine_bootstrap_kit_load(:bootstrap_pagination)
-  = redmine_bootstrap_kit_load(:bootstrap_switch)
-  = redmine_bootstrap_kit_load(:bootstrap_tables)
-  = redmine_bootstrap_kit_load(:font_awesome)
+  = bootstrap_load_base
+  = bootstrap_load_module(:label)
+  = bootstrap_load_module(:modals)
+  = bootstrap_load_module(:pagination)
+  = bootstrap_load_module(:switch)
+  = bootstrap_load_module(:tables)
+  = bootstrap_load_module(:font_awesome)
 
   = stylesheet_link_tag 'application', plugin: 'redmine_jenkins'
 
